# flyswot

./: .cookiecutter.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: background.md  conf.py  contributing.md  index.md  index.rst  installation.md  license.md  reference.md  reference.rst  requirements.txt  usage.md  usage.rst
src/flyswot/: __init__.py  __main__.py  cli.py  cli_inference.py  config.py  console.py  core.py  inference.py  logo.py  models.py  onnx_inference.py
tests/: __init__.py  test_cli.py  test_console.py  test_core.py  test_inference.py  test_logo.py  test_main.py  test_models.py  test_onnx_inference.py
tests/test_files/mult/20210629/model/: 2021-06-29-model.onnx  modelcard.md  vocab.txt
