[tool.poetry]
name = "flyswot"
version = "0.3.13"
description = "flyswot"
authors = ["Daniel van Strien <daniel.van-strien@bl.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davanstrien/flyswot"
repository = "https://github.com/davanstrien/flyswot"
documentation = "https://flyswot.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.urls]
Changelog = "https://github.com/davanstrien/flyswot/releases"

[tool.poetry.dependencies]
python = ">=3.8.0, <3.11.0"
rich = ">=10.1,<14.0"
toolz = ">=0.11.1,<0.13.0"
numpy = "^1.20"
Pillow = ">=8,<10"
typing_extensions = ">=3.10,<5.0"
huggingface-hub = ">=0.11.0,<0.13.0"
transformers = {extras = ["torch"], version = "^4.16.2"}
typer = ">=0.5.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^7.0"}
safety = "^2.3.5"
mypy = "^0.991"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^5.1.1"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.21.0"
flake8 = "^4.0.1"
black = "^22.12"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.1.20"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-click = "^4.3.0"
Pygments = "^2.14.0"
hypothesis = "^6.61.0"
memory-profiler = "^0.61.0"
pytest-datafiles = "^2.0"
onnxruntime = "^1.13.1"
furo = "^2022.9.15"
myst-parser = "^0.18.0"
cogapp = "^3.3.0"

[tool.poetry.scripts]
flyswot = "flyswot.cli:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["flyswot"]

[tool.coverage.report]
show_missing = true
fail_under = 90


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
