[project]
name = "flyswot"
version = "0.3.15"
description = "Command Line Interface for running Transformers Image Classification locally"
authors = [{ name = "Daniel van Strien" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "rich>=13.0",
    "toolz>=0.12",
    "numpy>=1.24",
    "Pillow>=10",
    "huggingface-hub>=0.20",
    "transformers[torch]>=4.36",
    "torchvision>=0.15",
    "typer>=0.9",
    "loguru>=0.7",
    "gitpython>=3.1.36",
    "requests>=2.31",
    "urllib3>=2.1",
]

[project.urls]
Homepage = "https://github.com/davanstrien/flyswot"
Repository = "https://github.com/davanstrien/flyswot"
Documentation = "https://flyswot.readthedocs.io"
Changelog = "https://github.com/davanstrien/flyswot/releases"

[project.scripts]
flyswot = "flyswot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "coverage[toml]>=7.4",
    "ty==0.0.35",
    "xdoctest[colors]>=1.1",
    "pre-commit>=3.4",
    "ruff>=0.9",
    "hypothesis>=6.84",
    "pytest-datafiles>=3.0",
]
docs = [
    "sphinx>=7.2",
    "sphinx-click>=6.0",
    "furo>=2024.1",
    "myst-parser>=3.0",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
core = "sysmon"
disable_warnings = ["no-sysmon"]
relative_files = true
source_pkgs = ["flyswot"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "C4"]
ignore = ["E501", "D415", "D300", "D403", "S310", "D100", "D104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flyswot"]
